--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+alembic==1.16.5
+altair==5.5.0
 anyio==4.10.0
 appnope==0.1.4
 argon2-cffi==25.1.0
@@ -7,11 +9,18 @@ asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.3.0
 babel==2.17.0
+bayesian-optimization==3.1.0
 beautifulsoup4==4.13.5
 bleach==6.2.0
+blinker==1.9.0
+cachetools==6.2.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
+click==8.1.8
+cloudpickle==3.1.1
+colorama==0.4.6
+colorlog==6.9.0
 comm==0.2.3
 contourpy==1.3.0
 cycler==0.12.1
@@ -23,10 +32,13 @@ executing==2.2.1
 fastjsonschema==2.21.2
 fonttools==4.59.2
 fqdn==1.5.1
+gitdb==4.0.12
+GitPython==3.1.45
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+imbalanced-learn==0.12.4
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
 ipykernel==6.30.1
@@ -54,31 +66,40 @@ jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.15
 kiwisolver==1.4.7
 lark==1.2.2
+llvmlite==0.43.0
+Mako==1.3.10
 MarkupSafe==3.0.2
 matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mistune==3.1.4
+narwhals==2.5.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.4.5
 notebook_shim==0.2.4
+numba==0.60.0
 numpy==2.0.2
+optuna==4.5.0
 overrides==7.7.0
 packaging==25.0
 pandas==2.3.2
 pandocfilters==1.5.1
 parso==0.8.5
+patsy==1.0.1
 pexpect==4.9.0
 pillow==11.3.0
 platformdirs==4.4.0
 prometheus_client==0.22.1
 prompt_toolkit==3.0.52
+protobuf==6.32.1
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==21.0.0
 pycparser==2.23
+pydeck==0.9.1
 Pygments==2.19.2
 pyparsing==3.2.4
 python-dateutil==2.9.0.post0
@@ -96,15 +117,24 @@ scikit-learn==1.6.1
 scipy==1.13.1
 seaborn==0.13.2
 Send2Trash==1.8.3
+shap==0.48.0
 six==1.17.0
+slicer==0.0.8
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.8
+SQLAlchemy==2.0.43
 stack-data==0.6.3
+statsmodels==0.14.5
+streamlit==1.49.1
+tenacity==9.1.2
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
+toml==0.10.2
 tomli==2.2.1
 tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250822
 typing_extensions==4.15.0
@@ -116,4 +146,6 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.14
+xgboost==2.1.4
 zipp==3.23.0
+shap==0.48.0
